--- a/style.css
+++ b/style.css
@@ -1,101 +1,101 @@
 * {
-	font-family: Helvetica;
-}
-body {
-	margin: 0px;
-}
-
-
-#container p {
-	margin: 0;
-}
-
-#header {
-	background: url(yosemite.jpg);
-	background-size: contain;
-	background-repeat: no-repeat;
-	height: 300px;
-	width: 100%;
-	margin: 0px;
+	font-family: 'Merriweather Sans', sans-serif;
 	padding: 0px;
+	margin: auto 0;
 }
 
-#yosemite {
-background-position: center;
--webkit-background-size: 100%;
--moz-background-size: 100%;
--o-background-size: 100%;
-background-size: 100%;
-position: absolute;s
-}
-
-
-
-#nav {
-	position: absolute;
-	bottom: 0px;
-	right: 0px;
-}
-
-#nav
- li {
-	display: inline;
-	list-style-type: none;
-	padding-right: 20px;
-	float: left;
-	position: relative;
-}
-
-#logo {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-}
-
-#nav li a {
-	font-color: white;
-	border-style: solid;
-	border-color: #FFFFFF;
-	border-width: 2px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	padding: 5px;
-}
-
-#nav li a:link {
-	color: #FFFFFF;
-	text-decoration: none;
-}
-
-#nav li a:visited {
+a:link {
 	text-decoration: none;
 	color: white;
 }
 
-
-#about-me {
-	width: 100%;
-	height: 300px;
-	background-color: red;
+a:visited {
+	text-decoration: none;
+	color: white;
 }
 
-#work{
-	width: 100%;
-	height: 300px;
-	background-color: black;
+a:hover {
+	color: #636f6d;
+}
+
+.headline {
+	text-align: center;
+	padding-top: 20px;
+}
+
+h1 {
+	color: #636f6d;
+}
+
+#container #my-story #web-dev #marketing #values #contact {
+	display: block;
 	position: relative;
+	padding: 0px;
+	margin: 0 auto;
+}
+
+#container {
+	width: 100%;
+	margin: 0 auto;
+}
+
+#me-photo {
+	margin: 0 auto;
+	display: block;
+	padding-top: 100px;
+	width: 20%;
+	height: 20%;
+}
+
+#header {
+	background-image: url('congruent_pentagon.png');
+	background-size: contain;
+	background-repeat: repeat;
+	min-height: 200px;
+	overflow: hidden;
+	text-align: center;
+
+}
+
+.odd {
+	background-image: url('texture.png');
+	background-size: contain;
+	background-repeat: repeat;
+}
+#nav-left {
+	display: inline-block;
+	padding-top: 20px;
+	padding-right: 20px;
+	padding-bottom: 30px;
+	font-size: 2rem;
+}
+
+#nav-right {
+	display: inline-block;
+	padding-top: 20px;
+	padding-bottom: 30px;
+	font-size: 2rem;
+}
+
+#my-story {
+	min-height: 200px;
+	clear: both;
+}
+
+#web-dev {
+	min-height: 200px;
+}
+
+#marketing {
+	
+	min-height: 200px;
+}
+
+#values {
+	min-height: 200px;
 }
 
 #contact {
-	width: 100%;
-	height: 300px;
-	background-color: red;
-	position: relative;
-}
-
-footer {
-	width: 100%;
-	height: 175px;
-	background-color: rgb(181,179,186);
+	
+	min-height: 200px;
 }
