--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ text-align: left;
 	vertical-align: top;
 	margin-top: 20px;
 	padding-top: 15px;
+	padding-bottom: 45px;
 }
 
 #my-story {
@@ -204,7 +205,7 @@ text-align: left;
 	min-height: 200px;
 	clear: both;
 	line-height: 1.5rem;
-	padding: 45px;
+
 }
 
 
