--- a/dropbox_test/CSS/SCSS/styles.scss
+++ b/dropbox_test/CSS/SCSS/styles.scss
@@ -60,7 +60,7 @@ color: $blue;
 /* Hero Styling */
 #hero {
 	background-color: $blue;
-	height: 470px;
+	height: auto;
 	width: 100%;
   padding-top: 40px;
   position: relative;
@@ -149,6 +149,32 @@ color: $blue;
   }
 }
 
+.mobile-menu {
+  text-align: center;
+  width: 85%;
+  visibility: hidden;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
+
+  ul {
+    list-style: none;
+  }
+
+  li {
+    display: inline;
+    margin-right: 10px;
+  }
+
+  li a {
+    color: white;
+  }
+
+  li a:hover {
+    color: $light-grey;
+  }
+}
+
 
 /* Why Dropbox Styling */
 
@@ -207,88 +233,91 @@ color: $blue;
   text-align: center;
   display: block;
 
-    .slideshow-wrap {
-      margin-bottom: 60px;
-    }
+  .slideshow-wrap {
+    margin-bottom: 60px;
+  }
 
-    p {
-      width: 310px / 1050px * 100%;
-      margin: 0 auto;
-      margin-bottom: 20px;
-      margin-top: 20px;
-    }
+  p {
+    width: 310px / 1050px * 100%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
 
-    h2 {
-      width: 310px / 1050px * 100%;
-      margin: 0 auto;
-      margin-bottom: 40px;
-    }
+  h2 {
+    width: 310px / 1050px * 100%;
+    margin: 0 auto;
+    margin-bottom: 40px;
+  }
 
+  #slider {
+    list-style: none;
+    position: relative;
+    width: 96%;
+    height: 325px;
+    max-width: 540px;
+    margin: 0 auto;
+    display: inline-block;
+  }
 
-#slider {
-  list-style: none;
-  position: relative;
-  width: 100%;
-  height: 325px;
-  max-width: 540px;
-  margin: 0 auto;
-  display: inline-block;
-}
+  #slider img {
+   position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: auto;
+    max-width: 775px;
+    max-height: 400px;
+  }
 
-#slider img {
- position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: auto;
-  max-width: 775px;
-  max-height: 400px;
-}
+  #control-right {
+    display: inline;
+    top: -150px;
+    left: 50px;
+    position: relative;
+    cursor:pointer;
+  }
 
-#control-right {
-  display: inline;
-  top: -150px;
-  left: 30px;
-  position: relative;
-}
+  #control-left {
+    display: inline;
+    left: -50px;
+    top: -150px;
+    position: relative;
+    cursor:pointer;
+  }
 
-#control-left {
-  display: inline;
-  left: -30px;
-  top: -150px;
-  position: relative;
-}
+  #dots {
+    list-style:none;
+    padding:0px;
+    padding-top:10px;
+    text-align:center;
+    width: 100%;
+    
 
-#dots {
-  list-style:none;
-  padding:0px;
-  padding:10px;
-  text-align:center;
-  width: 100%;
-  
+  }
+  #dots ul{
+    margin-top:10px;
+  }
 
-}
-#dots ul{
-  margin-top:10px;
-}
-#dots li {
-  display:inline-block;
-  border-radius:10px;
-  width:10px;
-  height:10px;
-  margin: 0 5px;
-  border:2px solid $blue;
-  background: $blue;
-  cursor:pointer;
-}
+  #dots li {
+    display:inline-block;
+    border-radius:10px;
+    width:10px;
+    height:10px;
+    margin: 0 5px;
+    border:3px solid $blue;
+    background: $blue;
+    cursor:pointer;
+  }
 
-#dots li.active {
-  background: $light-grey;
-  border:2px solid $light-grey;
-}
-    .button {
-      margin-bottom: 60px;
-    }
+  #dots li.active {
+    background: $light-grey;
+    border:3px solid $light-grey;
+  }
+
+  .button {
+    margin-bottom: 60px;
+  }
 }
 
 /* Dropbox Video Styling */
@@ -302,9 +331,8 @@ color: $blue;
     h2 {
       position: relative;
       display: inline-block;
-      top: 0;
+      top: 35px;
       width: 28.523%;
-      left:45px;
     }
 
     .videoPlayer {
@@ -314,11 +342,12 @@ color: $blue;
     }
 
     img.play {
-      display:inline-block;
+      display:block;
       position: relative;
-      top: 135px;
+      top: 85px;
       max-width: 100%;
-      left: -170px;
+      margin: 0 auto;
+
     }
 
     .still {
@@ -367,24 +396,26 @@ footer {
 	height: 300px;
 	width: 100%;
 	text-align: left;
+
     ul {
       display: inline-block;
       width: 85px / 1050px * 100%;
       margin-right: 30px;
       list-style: none;
       vertical-align: top;
-     li a {
-      font-size: 13px;
-      color: $dark-grey;
-     }
 
-     .header {
-      font-weight: bold;
-      font-size: 13px;
-      line-height: 0%;
-      color: $dark-grey;
-    }
-    }
+       li a {
+        font-size: 13px;
+        color: $dark-grey;
+       }
+
+       .header {
+        font-weight: bold;
+        font-size: 13px;
+        line-height: 0%;
+        color: $dark-grey;
+      }
+  }
 }
 
 /* Animations */
@@ -559,38 +590,157 @@ footer {
 
 
 /* Media Queries */
-
 @media all and (max-width: 685px) {
-        nav {
-          display: none;
-        }
 
-        #why-dropbox .blocks {
-          display: block;
-          margin: 0 auto;
-          width: 55%;
-        }
-      }
+    .mobile-menu {
+    visibility: visible;
+  }
+    .navButton {
+      visibility: hidden;
+    }
+
+    nav {
+      display: none;
+    }
+
+    #why-dropbox .blocks {
+      display: block;
+      margin: 0 auto;
+      width: 55%;
+    }
+
+    a.button {
+      width: 16.523%;
+    }
+
+    #what-can-dropbox h2 {
+    width: 65.524%;
+  }
+
+  #what-can-dropbox p {
+  width: 70.524%;
+  }
+
+  #what-can-dropbox a.button {
+    width:23.524%;
+  }
+
+  #dropbox-video h2 {
+    width: 65.524%;
+  }
+
+#hero #copy {
+  width: 70.3%;
+}
+
+#hero {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+}
+
+/*@media all and (max-width: 320px) {
+  #what-can-dropbox h2 {
+    width: 65.524%;
+  }
+
+  #what-can-dropbox p {
+  width: 70.524%;
+  }
+
+  #what-can-dropbox a.button {
+    width:20.524%;
+  }
+}*/
 
 
-/*.mobile {
-  text-align: left;
+/* Mobile Nav */
+/*.mobile-menu {
+  position: relative;
+  width: 200px;
+  margin: 0 auto;
+  padding: 10px;
+  background: #fff;
+  border-radius: 7px;
+  border: 1px solid rgba(0,0,0,0.15);
+  box-shadow: 0 1px 1px rgba(50,50,50,0.1);
+  cursor: pointer;
+  outline: none;
+}
+
+/*.mobile-menu:after {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  margin-top: 3px;
+  border-width: 6px 6px 0 6px;
+  border-style: solid;
+  border-color: #8aa8bd transparent;
+}*/
+
+/*.mobile-menu .dropdown {
+  position: absolute;
+  top: 140%;
   left: 0;
+  right: 0;
   background: white;
-  border: 2px solid $blue;
-  border-radius: 2px;
-
-  ul {
-  
+  border-radius: inherit;
+  border: 1px solid rgba(0,0,0,0.17);
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+  font-weight: normal;
+  transition: all 0.5s ease-in;
   list-style: none;
-    position: relative;
-    background: white;
+  pointer-events: none;
 }
 
+.mobile-menu .dropdown li a {
+  float: right;
+  color: inherit;
 }
 
-  .mobile ul li:hover > ul {
-    display: block;
-  }*/
 
+/*.mobile-menu .dropdown li:first-of-type a {
+  border-radius: 7px 7px 0 0;
+}
 
+.mobile-menu .dropdown li:last-of-type a {
+  border-radius: 0 0 7px 7px;
+  border: none;
+}
+
+.mobile-menu .dropdown li:hover a {
+    background: #f3f8f8;
+}
+     
+.mobile-menu .dropdown:after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: 100%;
+    right: 15px;
+    border-width: 0 6px 6px 6px;
+    border-style: solid;
+    border-color: #fff transparent;    
+}
+ 
+.mobile-menu .dropdown:before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: 100%;
+    right: 13px;
+    border-width: 0 8px 8px 8px;
+    border-style: solid;
+    border-color: rgba(0,0,0,0.1) transparent;    
+} 
+
+.mobile-menu.active .dropdown {
+    opacity: 1;
+    pointer-events: auto;
+}
+*/
