--- a/dropbox_test/CSS/SCSS/styles.css
+++ b/dropbox_test/CSS/SCSS/styles.css
@@ -47,7 +47,7 @@ a.button {
   width: 100%;
   padding-top: 40px;
   position: relative;
-  z-index: -10;
+  z-index: 0;
   overflow: hidden; }
   #hero .layer {
     background-image: url("../../assets/dropbox-for-business-files.png");
@@ -74,7 +74,10 @@ a.button {
       border-radius: 5px;
       padding: 14px;
       margin-bottom: 20px;
-      width: 24.28571%; }
+      width: 24.28571%;
+      cursor: pointer; }
+    #hero .header-text .button:hover {
+      background-color: #f0f7fd; }
   #hero h1 {
     margin-top: 75px; }
   #hero ul {
@@ -86,6 +89,11 @@ a.button {
     color: white;
     display: inline-block;
     margin: 0 auto; }
+  #hero a {
+    color: white; }
+  #hero a:hover {
+    color: #8899A7;
+    border-bottom: #8899A7; }
   #hero #copy {
     line-height: 30px;
     width: 52.38095%; }
@@ -157,6 +165,8 @@ a.button {
     overflow: hidden; }
   #why-dropbox .button {
     margin-bottom: 40px; }
+  #why-dropbox .button:hover {
+    background-color: #f0f7fd; }
 
 /* What Can Dropbox Do Styling */
 #what-can-dropbox {
@@ -225,6 +235,8 @@ a.button {
     border: 3px solid #8899A7; }
   #what-can-dropbox .button {
     margin-bottom: 60px; }
+  #what-can-dropbox .button:hover {
+    background-color: #f0f7fd; }
 
 /* Dropbox Video Styling */
 #dropbox-video {
@@ -247,7 +259,8 @@ a.button {
     position: relative;
     top: 85px;
     max-width: 100%;
-    margin: 0 auto; }
+    margin: 0 auto;
+    cursor: pointer; }
   #dropbox-video .still {
     width: auto;
     height: 100%;
@@ -276,6 +289,8 @@ video {
     line-height: 35px; }
     #get-your-team .buttonTwo a {
       text-decoration: none; }
+  #get-your-team .buttonTwo:hover {
+    background-color: #3398ea; }
   #get-your-team h2 {
     padding-top: 15px; }
 
@@ -457,107 +472,5 @@ footer {
   #hero {
     padding-right: 10px;
     padding-left: 10px; } }
-/*@media all and (max-width: 320px) {
-  #what-can-dropbox h2 {
-    width: 65.524%;
-  }
-
-  #what-can-dropbox p {
-  width: 70.524%;
-  }
-
-  #what-can-dropbox a.button {
-    width:20.524%;
-  }
-}*/
-/* Mobile Nav */
-/*.mobile-menu {
-  position: relative;
-  width: 200px;
-  margin: 0 auto;
-  padding: 10px;
-  background: #fff;
-  border-radius: 7px;
-  border: 1px solid rgba(0,0,0,0.15);
-  box-shadow: 0 1px 1px rgba(50,50,50,0.1);
-  cursor: pointer;
-  outline: none;
-}
-
-/*.mobile-menu:after {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  right: 15px;
-  top: 50%;
-  margin-top: 3px;
-  border-width: 6px 6px 0 6px;
-  border-style: solid;
-  border-color: #8aa8bd transparent;
-}*/
-/*.mobile-menu .dropdown {
-  position: absolute;
-  top: 140%;
-  left: 0;
-  right: 0;
-  background: white;
-  border-radius: inherit;
-  border: 1px solid rgba(0,0,0,0.17);
-  box-shadow: 0 0 5px rgba(0,0,0,0.1);
-  font-weight: normal;
-  transition: all 0.5s ease-in;
-  list-style: none;
-  pointer-events: none;
-}
-
-.mobile-menu .dropdown li a {
-  float: right;
-  color: inherit;
-}
-
-
-/*.mobile-menu .dropdown li:first-of-type a {
-  border-radius: 7px 7px 0 0;
-}
-
-.mobile-menu .dropdown li:last-of-type a {
-  border-radius: 0 0 7px 7px;
-  border: none;
-}
-
-.mobile-menu .dropdown li:hover a {
-    background: #f3f8f8;
-}
-     
-.mobile-menu .dropdown:after {
-    content: "";
-    width: 0;
-    height: 0;
-    position: absolute;
-    bottom: 100%;
-    right: 15px;
-    border-width: 0 6px 6px 6px;
-    border-style: solid;
-    border-color: #fff transparent;    
-}
- 
-.mobile-menu .dropdown:before {
-    content: "";
-    width: 0;
-    height: 0;
-    position: absolute;
-    bottom: 100%;
-    right: 13px;
-    border-width: 0 8px 8px 8px;
-    border-style: solid;
-    border-color: rgba(0,0,0,0.1) transparent;    
-} 
-
-.mobile-menu.active .dropdown {
-    opacity: 1;
-    pointer-events: auto;
-}
-*/
 
 /*# sourceMappingURL=styles.css.map */
