some changes to nav

--- a/dropbox_test/CSS/SCSS/styles.css
+++ b/dropbox_test/CSS/SCSS/styles.css
@@ -92,7 +92,7 @@ a.button {
   #hero a {
     color: white; }
   #hero a:hover {
-    color: #8899A7;
+    color: #4C545A;
     border-bottom: #8899A7; }
   #hero #copy {
     line-height: 30px;
@@ -104,7 +104,7 @@ a.button {
 .desktop {
   text-align: left;
   left: 0;
-  width: 140px;
+  width: 152px;
   position: absolute;
   top: 50px;
   margin-right: 20px; }
@@ -130,7 +130,7 @@ a.button {
   .mobile-menu li a {
     color: white; }
   .mobile-menu li a:hover {
-    color: #8899A7; }
+    color: #4C545A; }
 
 /* Why Dropbox Styling */
 #why-dropbox {
