--- a/dropbox_test/CSS/SCSS/styles.css
+++ b/dropbox_test/CSS/SCSS/styles.css
@@ -144,19 +144,19 @@ a.button {
     width: 29.52381%;
     margin-right: 30px; }
   #why-dropbox #block-one.animate {
-    opacity: 0;
+    display: none;
     -webkit-animation: slideIn 3s ease-in-out 0s forwards;
     -o-animation: slideIn 3s ease-in-out 0s forwards;
     -moz-animation: slideIn 3s ease-in-out 0s forwards;
     animation: slideIn 3s ease-in-out 0s forwards; }
   #why-dropbox #block-two.animate {
-    opacity: 0;
+    visibility: hidden;
     -webkit-animation: slideIn 3s ease-in-out 1s forwards;
     -o-animation: slideIn 3s ease-in-out 1s forwards;
     -moz-animation: slideIn 3s ease-in-out 1s forwards;
     animation: slideIn 3s ease-in-out 1s forwards; }
   #why-dropbox #block-three.animate {
-    opacity: 0;
+    visibility: hidden;
     -webkit-animation: slideIn 3s ease-in-out 2s forwards;
     -o-animation: slideIn 3s ease-in-out 2s forwards;
     -moz-animation: slideIn 3s ease-in-out 2s forwards;
