--- a/version-two/home.css
+++ b/version-two/home.css
@@ -25,7 +25,7 @@ body {
 
 header {
 	text-align: center;
-	background-image: url('utah1.jpg');
+	background-image: url('utah1.JPG');
 	background-size: cover;
 	height:700px;
 	position: relative;
