--- a/version-two/home.css
+++ b/version-two/home.css
@@ -34,7 +34,7 @@ header {
 
 header #text {
 	position: absolute;
-	color:black;
+	color:white;
 	margin-left: 31%;
 	margin-top: 270px;
 	line-height: 2rem;
